# apt-pac

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PKGBUILD  PKGBUILD-GIT  PKGBUILD-STABLE  README.md  SECURITY.md  TODO.md  config.toml  install.sh  pyproject.toml  test_output.txt  verify_fix.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
locales/: apt-pac.pot  es.po  fr.po  locale.ini  locales.ini  pt_BR.po
scripts/: compile-translations.sh  update-translations.sh  update-version.sh
src/apt_pac/: __init__.py  __main__.py  alpm_helper.py  aur.py  cli.py  commands.py  config.py  i18n.py  logger.py  sources.py  ui.py
src/completions/: _apt-pac  apt-pac.bash  apt-pac.fish
src/man/: apt-pac.8
tests/: run_tests.py  test_aur_deps.py  test_aur_features.py  test_aur_install.py  test_aur_install_logic.py  test_cleaner.py  test_commands_usage.py  test_complex_aur_deps.py  test_cycle_split.py  test_mixed_install_actions.py  test_news.py  test_progress.py  test_recursive_aur.py  test_search_logic.py  test_show_logic.py  test_ui_summary.py  test_upgrade.py  test_upgrade_logic.py  test_upgrade_versions.py
