[project]
name = "apt-pac"
version = "2026.01.01"
description = "An APT-style wrapper for pacman with beautiful output"
readme = "README.md"
authors = [
    { name = "Arch User", email = "user@archlinux.org" }
]
requires-python = ">=3.8"
dependencies = [
    "rich>=10.0.0",
]

[project.scripts]
apt-pac = "apt_pac.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
