[project]
name = "apt-pac"
version = "2026.01.17"
description = "An APT-style wrapper for pacman with beautiful output"
readme = "README.md"
authors = [
    { name = "Arch User", email = "user@archlinux.org" }
]
requires-python = ">=3.11"
dependencies = [
    "rich>=10.0.0",
    "pyalpm",
]

[project.scripts]
apt-pac = "apt_pac.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["apt_pac"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
apt_pac = ["../locales/*.mo"]


[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
